--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     namespace 'com.works.muhtas2'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.works.muhtas2"
@@ -40,6 +40,8 @@ android {
 }
 
 dependencies {
+
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
